Bug 479776 - "Touchpad" item is listed under "Applications" instead of under "System Settings"
Summary: "Touchpad" item is listed under "Applications" instead of under "System Setti...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Touchpad (other bugs)
Version First Reported In: 5.92.0
Platform: Arch Linux Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6, usability
Depends on:
Blocks:
 
Reported: 2024-01-13 23:13 UTC by Patrick Silva
Modified: 2024-01-25 19:42 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (174.30 KB, image/png)
2024-01-13 23:13 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2024-01-13 23:13:26 UTC
Created attachment 164886 [details]
screenshot

SUMMARY
If I'm not mistaken, in previous versions of Plasma the "Touchpad" item was listed under "System Settings" section of Shortcuts KCM. But on Plasma 6 RC1 it is listed under "Applications", and seems inappropriate a system component used to control an hardware under "Applications" instead of under "System Settings".

STEPS TO REPRODUCE
1. open Shortcuts KCM
2. 
3. 

OBSERVED RESULT
"Touchpad" item under "Applications" section, as seen in the attached screenshot

EXPECTED RESULT
"Touchpad" item under "System Settings" section

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.92.0
KDE Frameworks Version: 5.248.0
Qt Version: 6.7.0
Graphics Platform: Wayland
Comment 1 Nate Graham 2024-01-16 23:17:01 UTC
Technically, it is in fact a tiny app.

However "System Settings" might be a more user-friendly place for it indeed.
Comment 2 Nicolas Fella 2024-01-17 21:58:24 UTC
I think this is happening because the component name for the shortcuts is kcm_touchpad and there is a desktop file with this name, so the KCM assumes it's an application
Comment 3 Bug Janitor Service 2024-01-25 01:06:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2006
Comment 4 Nicolas Fella 2024-01-25 19:39:54 UTC
Git commit 83c0519d164818be7dcf95f382472511bb27a503 by Nicolas Fella.
Committed on 25/01/2024 at 20:39.
Pushed by nicolasfella into branch 'master'.

[kcm/keys] Improve system service detection

Currently we detect everything with a desktop file as Application,
which contains unexpected results.

To fix this:
- Consider desktop files with NoDisplay to be system services (this includes KCMs)
- Check X-KDE-GlobalShortcutType to determine whether it's a service

M  +19   -3    kcms/keys/globalaccelmodel.cpp

https://invent.kde.org/plasma/plasma-desktop/-/commit/83c0519d164818be7dcf95f382472511bb27a503
Comment 5 Nicolas Fella 2024-01-25 19:42:00 UTC
Git commit 96100ae814bb360b90069b002cf4bf496cb9374f by Nicolas Fella.
Committed on 25/01/2024 at 20:41.
Pushed by nicolasfella into branch 'Plasma/6.0'.

[kcm/keys] Improve system service detection

Currently we detect everything with a desktop file as Application,
which contains unexpected results.

To fix this:
- Consider desktop files with NoDisplay to be system services (this includes KCMs)
- Check X-KDE-GlobalShortcutType to determine whether it's a service
(cherry picked from commit 83c0519d164818be7dcf95f382472511bb27a503)

M  +19   -3    kcms/keys/globalaccelmodel.cpp

https://invent.kde.org/plasma/plasma-desktop/-/commit/96100ae814bb360b90069b002cf4bf496cb9374f