[kcm/keys] Improve system service detection

Currently we detect everything with a desktop file as Application,
which contains unexpected results.

To fix this:
- Consider desktop files with NoDisplay to be system services (this includes KCMs)
- Check X-KDE-GlobalShortcutType to determine whether it's a service

BUG: 479776
(cherry picked from commit 83c0519d164818be7dcf95f382472511bb27a503)